# openrouter-free

./: README.md  pyproject.toml  setup.py  test_client.py  test_error_threshold.py
openrouterfree/: __init__.py  client.py  models.py  proxy.py  scanner.py
