[project]
name = "openrouter-free"
version = "1.0.0"
authors = [
  { name="tcsenpai", email="tcsenpai@discus.sh" },
]
description = "CLI and programmatically fetcher for open router current free models with advanced filtering."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "openai",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tcsenpai/openrouter-free"
"Bug Tracker" = "https://github.com/tcsenpai/openrouter-free/issues"

[project.scripts]
openrouter-free = "openrouterfree.scanner:main"
openrouter-free-proxy = "openrouterfree.proxy:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
